# ms-mole

./: LICENSE  README.md  setup.cfg
ms_mole/: data.py  loss.py  models.py  train.py  train_retriever.py  train_transformer_retriever.py
ms_mole/utils/: generate_scripts_hpc.py  label_freq_sort.npy  precompute_fps_inchi_cands.py  precompute_hard_negative_cands.py  precompute_hard_negative_cands_formula.py  precompute_hard_negative_cands_mass.py
notebooks/: example.ipynb
