[metadata]
name = ms-mole
author = Gaetan De Waele
description = MOlecular retrieval Loss function Evaluation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gdewael/ms-mole
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.9
install_requires = 
    torch
    tensorboard
    massspecgym
    jupyter